# ChangeLog for app-editors/sxemacs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sxemacs-22.1.14 (18 Mar 2011)

  18 Mar 2011; Hans de Graaff <graaff@gentoo.org> +sxemacs-22.1.14.ebuild:
  Update from Horst Günther Burkhardt III

*sxemacs-22.1.12 (28 Feb 2011)

  28 Feb 2011; Hans de Graaff <graaff@gentoo.org> -sxemacs-22.1.9.ebuild,
  +sxemacs-22.1.12.ebuild:
  Version bump from bug 356657.

  22 Jul 2008; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Change postgres dependency to the new base virtual.

  14 Jun 2008; Ulrich Mueller <ulm@gentoo.org> sxemacs-22.1.9.ebuild:
  Change to new syntax of eselect-emacs and add missing dependency.

  08 Jun 2008; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Initial import of sxemacs ebuild. I'm proxying this for Horst Günther
  Burkhardt III, from the sxemacs dev team.
