@@ -2,16 +2,14 @@
 Hash: SHA256
 
 DIST NeXT_XEmacs.tar.gz 39571 RMD160 3c2cedf75e4ece412031b20a15614a78367393f4 SHA1 619912734b1a1fae5115941b904d41beb4765b47 SHA256 35a0d988fd4ee801572639a99798571aa9fad140ddbed1455565ae9d5e0086c7
-DIST sxemacs-22.1.12.tar.lzma 6999247 RMD160 eb9722af6f676bf1bb231be374e20ff37b48ef23 SHA1 1a959363ec4f35defe7ec4631674a4cc3e6987e6 SHA256 ea27cca06e948aa1c22afd55e27ba7c1ead0a785e7b6aef882619de02c89880b
-DIST sxemacs-22.1.14.tar.lzma 6995552 RMD160 b3684068780d4d1bac6dbb6ff24b1992eae6f435 SHA1 f85d635687a60a6fcce84eb27231beb99ee204ff SHA256 efe05860147e47a59c5c1400c24028e2ef08c79dac1da1ffd6561367f589699f
-EBUILD sxemacs-22.1.12.ebuild 10523 RMD160 0af031564e241b80c1057b1cfbb734f49404aaa3 SHA1 89fb157f65eaedc0de22a7bf26ebca16caf1f220 SHA256 cd0625816e5ac4cd6eff2e9e24aa503a4ca689957c37561df132bbe83fd790f9
-EBUILD sxemacs-22.1.14.ebuild 10872 RMD160 b1812240fd8d1a30d2df7780edda817404a0834d SHA1 b4a47669d3964ab196084435c37a6d9d8574bee8 SHA256 1732b4d70c3d175db96d28eada5f507932ad5e284e4d8a387def940c3d43d3a6
-MISC ChangeLog 871 RMD160 2ef714b95e84ef6be8f785f5b713fd3d7a9f99dd SHA1 fae1a3158390d031e54f12541c35702890fe4fe9 SHA256 b04d6ae35896d2c55c138fc4a5a1a8ff2cb70cd59058f8fa8ba1fce24b3265b9
+DIST sxemacs-22.1.15.tar.xz 6964448 RMD160 df3d931766f482caff7243dabfa790a854417e51 SHA1 d7a4469be01e83b2468d03f45a1d81bbb212a7e6 SHA256 3303817fdf27518f11671c016420156f6702a9a9f895e1099b3e70127ad5eabe
+EBUILD sxemacs-22.1.15.ebuild 10636 RMD160 06342f01d319d41f2b0e3ae043acd9c9da1ec28f SHA1 c8d560c4b256b2a7c815e70d69f172bc45983eb5 SHA256 04cb00b58b26e287be96b0ed884f8f33f2714ea233c68b97fdf450a3c5d20102
+MISC ChangeLog 1022 RMD160 7978e2047a846e7475647a7235391606f1509568 SHA1 408474ceff2a04f15932e5005aebc79171ee9e31 SHA256 05a0b398d86c2aafbd30c7a8f0d91aef1b35d310d487c96f7005c5ba06e58a12
 MISC metadata.xml 365 RMD160 596ab334c06c2d7c1bc8b4ba6d24d29562c82d75 SHA1 f9bf09365f9739065d4b4f52b7af47638f16277d SHA256 da449e36c4d0339e88247a8fb361c3793188d2e6f817861f74d5d64b3a61353b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk2DQuAACgkQrnu0mw69JkoLfAD/YnIsd0yflWST/l/lNs5cGgam
-w+vxOHvPIS/IaIp0rZ8A/ifr9FKCaaAuvYyFWDrBnwcko4l6NaZUqaIrqqFLNx6K
-=AL7f
+iF4EAREIAAYFAlANisYACgkQiIP6VqMIqNc3JwEAkJMBfpZW6XFpYe0NUI03U8xL
+tSdpPERk+O3mlPtwDuUA/iBzG57q4gg9DFz/ksuWhvU2mTha36c+9IfDbji/L9UX
+=Tlz4
 -----END PGP SIGNATURE-----
